* Added Thermal Expansion Redstone Furnace compatibility for all smelting recipes.
* Blaze Rods can now be crafted using Blaze Powder and Black Marble Sticks.
* Set Slime Block to no longer being an opaque cube.
* End Portal Frame Blocks are now craftable (and expensive).
* Horse Armor is now craftable.
* Slightly reduced spawn rate of crop farms.
* Added Ruby and Sapphire stuff.
* Set Saddles to be stackable up to 64.
* Lowered ore spawn chances.
* Zollernium harvest level has been increased to 7.
* Amaranth harvest level has been increased to 5.
* Added in Ruby tools.
* Added in Sapphire tools.
    * Slightly better than Ruby, but with the same harvest level.
* Added back in Colored Bricks.
* Added the Tropical Forest biome.
* Added Wood and Stone Armor.
* Duck Eggs are now throwable.

-- FIXES --
* Fixed Mortem sword not applying Wither effect to Players.
* Fixed Mortem shooting Wither Skulls in wrong direction.
* Fixed "Hold LSHIFT for more information" not displaying properly on all Swords.
* Fixed Silver Ingots not being craftable from Silver Nuggets.
* Fixed Grapefruit Logs not crafting into Grapefruit Planks.
* Fixed armor pieces not being craftable and only crafting the Amaranth equivalent.
-----------


[2.6.5]
* Amaranth and Azurite tools now have enchantments on them when crafted / grabbed from creative inventory.
* Lang issues have been fixed with Shine Torch and Popcorn Bowl.
* Zollernium harvest level has been increased to 6.
* Registered more ores, blocks, dusts and ingots with the Ore Dictionary.
* Hog Zombies now spawn with diamond swords when a hog is struck by lightning.
* Added a fifth, Wither-themed Power Sword called Mortem.
    * Applies Wither effect to entities and Players on left-click.
    * Shoots out Wither Skulls on right-click.
* Added Cookie Block and Chocolate Block to Candy Land world gen spawn.
* Candy Trees now spawn in the Candy Land biome.
* Changed biome spawn rates.
* Swamp Clay Balls can now be cooked into bricks.