@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "2.6.5-1.7.10"
+version = "2.6.7-1.7.10"
 group= "zollernextras" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ZollernExtras"
 
