@@ -11,7 +11,6 @@ import zollernextras.entity.EntityDuckEgg;
 import zollernextras.handlers.FuelHandlers;
 import zollernextras.handlers.Handlers;
 import zollernextras.items.ItemList;
-import zollernextras.items.teleporter.MessageTeleportToDimension;
 import zollernextras.lib.MainHelper;
 import zollernextras.lib.ModInfo;
 import zollernextras.lib.OreDict;
@@ -31,7 +30,6 @@ import cpw.mods.fml.common.network.NetworkRegistry;
 import cpw.mods.fml.common.network.simpleimpl.SimpleNetworkWrapper;
 import cpw.mods.fml.common.registry.EntityRegistry;
 import cpw.mods.fml.common.registry.GameRegistry;
-import cpw.mods.fml.relauncher.Side;
 
 @Mod(modid = ModInfo.MODID, name = ModInfo.NAME, version = ModInfo.VERSION)
 public class ZollernExtrasMod {
@@ -53,9 +51,6 @@ public class ZollernExtrasMod {
 	
 	@EventHandler
 	public void preInit(FMLPreInitializationEvent event) {
-		snw = NetworkRegistry.INSTANCE.newSimpleChannel(ModInfo.MODID);
-		snw.registerMessage(MessageTeleportToDimension.TeleportHandler.class,
-				MessageTeleportToDimension.class, 1, Side.SERVER);
 		MainHelper.Log("Beginning to load Zollern Extras...");
 		this.filePath = MainHelper.getFilePath(event);
 		ModTabs.init();
