@@ -58,8 +58,8 @@ public class BiomeList {
 		addBiome(iceMountains, BiomeType.ICY, 14);
 		addBiome(coalHills, BiomeType.WARM, 8);
 		addBiome(badLands, BiomeType.DESERT, 17);
-		addBiome(minersLand, BiomeType.WARM, 4);
-		addBiome(candyLand, BiomeType.WARM, 10);
+		addBiome(minersLand, BiomeType.WARM, 2);
+		addBiome(candyLand, BiomeType.WARM, 5);
 		addBiome(crystalOcean, BiomeType.WARM, 6);
 		addBiome(tropicalForest, BiomeType.WARM, 8);
 		MainHelper.Log("Biomes loaded!");
